--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/getOpenId/index"
+    "pages/getOpenId/index",
+    "pages/talent/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
